@@ -1,3 +1,9 @@
+2002-11-19  Bruno Haible  <bruno@clisp.org>
+
+	* gcd.h (PARAMS): Remove macro.
+	(gcd): Use ANSI C function declarations.
+	* gcd.c (gcd): Likewise.
+
 2002-11-15  Bruno Haible  <bruno@clisp.org>
 
 	* strcspn.c: Include <stddef.h>.
